authentication vertical slice/feature done
