# app/Domains/Auth/DTOs/LoginDTO.php
@@ -1,0 +1,23 @@
+<?php
+
+namespace App\Domains\Auth\DTOs;
+
+class LoginDTO
+{
+    public string $email;
+    public string $password;
+
+    public function __construct(string $email, string $password)
+    {
+        $this->email = $email;
+        $this->password = $password;
+    }
+
+    public static function fromRequest(array $data): self
+    {
+        return new self(
+            $data['email'],
+            $data['password'],
+        );
+    }
+}
